force-app/main/default/objects/Announcement__c/fields/Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Date__c</fullName>
    <description>The date when this announcement was published or becomes effective</description>
    <inlineHelpText>Select the date when this announcement was published or when it becomes effective.</inlineHelpText>
    <label>Announcement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>