force-app/main/default/objects/Announcement__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The type or category of this announcement</description>
    <inlineHelpText>Select the category that best describes this announcement type.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Launch</fullName>
            </value>
            <value>
                <fullName>Training &amp; Certification</fullName>
            </value>
            <value>
                <fullName>Compliance Alert</fullName>
            </value>
            <value>
                <fullName>Territory Update</fullName>
            </value>
            <value>
                <fullName>Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>