force-app/main/default/objects/Announcement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed information about the announcement including key details, action items, and any relevant context</description>
    <inlineHelpText>Enter the full details of the announcement. This content may be delivered audibly via mobile app, so write in clear, conversational language.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>