force-app/main/default/objects/Announcement__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The date after which this announcement is no longer relevant or should no longer be displayed</description>
    <inlineHelpText>Select the date when this announcement expires and should no longer be shown to users.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>