force-app/main/default/objects/Announcement__c/listViews/Active_Announcements.listView-meta.xml
<ListView>
    <fullName>Active_Announcements</fullName>
    <columns>NAME</columns>
    <columns>Announcement_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Active Announcements</label>
</ListView>