force-app/main/default/objects/Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Announcement_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Announcements</label>
</ListView>